# DatacubeAU_com.bot

./: .dockerignore  .env.example  .env.production.example  .gitignore  .vercelignore  Dockerfile  README.md  docker-compose.yml  ecosystem.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
admin/: middleware.ts  next.config.js  package-lock.json  package.json
admin/app/: globals.css  layout.tsx
admin/components/: app-shell.tsx
admin/lib/: api-client.ts  auth.ts  nav.ts
ai/: ai-handler.js  context-injector.js  faq-matcher.js  openrouter-client.js  prompt-builder.js  response-formatter.js
api/: server.js
api/middleware/: auth.middleware.js  cors.middleware.js
api/routes/: admin.route.js  bot.route.js  (+6 more)
bot/: event-handler.js  index.js  session-store.js  wa-client.js
context/: architecture.md  datacube-architecture.md  faq.md  links.md  stack-overview.md  troubleshooting.md
db/: ai-calls.db.js  bot-numbers.db.js  commands.db.js  database.js  events.db.js  kb.db.js  message-queue.db.js  messages.db.js  processed-messages.db.js  qa-cache.db.js  rate-limits.db.js  trends.db.js  users.db.js
deploy/: DEPLOYMENT_GUIDE.md
docs/: SMARTNESS-LAYER.md  VPS-OPS.md
handlers/: help.handler.js  link.handler.js  onboard.handler.js  rules.handler.js  updates.handler.js
plans/: architecture.md
router/: ai-gate.js  intent-classifier.js  message-router.js
scripts/: health-check.js  seed-context.js  setup.js
utils/: config-loader.js  logger.js  message-logger.js  outbound-queue.js  rate-limiter.js  text-normalizer.js
(+56 files in other folders)
