[project]
name = "datacube-au-whatsapp-bot"
version = "0.1.0"
description = "Production-minded V1 WhatsApp AI bot core for Datacube AU"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "gunicorn>=23.0.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.31",
  "asyncpg>=0.29.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
]

[tool.uv]
dev-dependencies = []
